# Triangular_Billiards_Simulator

./: .gitattributes  CMakeLists.txt  README.md  biliardo.cpp  biliardo.hpp  biliardo_statistica.cpp  biliardo_statistica.hpp  biliardo_test.cpp  launch_biliardo.sh  main.cpp  test_sfml.cpp
include/SFML/Graphics/: Rect.hpp:Zone.Identifier
sfml_tut/: biliardo
tutorial/: biliardo
